<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.recipeapplication.viewmodels.MainViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:padding="10sp"
            android:text="Recipes"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10sp"
            app:cardElevation="2dp">

            <SearchView
                android:id="@+id/search_view"
                android:clickable="true"
                android:iconifiedByDefault="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="Search Recipe"
                android:focusable="true" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:padding="10sp"
            android:text="Categories"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <HorizontalScrollView
            android:id="@+id/mealTypeScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mealTypeChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app1:checkedChip="@+id/mainCourseChip"
                    app1:selectionRequired="true"
                    app1:singleLine="true"
                    app1:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mainCourseChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sideDishChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/dessertChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/appetizerChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/saladChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/breakfastChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abrilfatface_regular"
            android:padding="10sp"
            android:text="@string/recipes"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_recipes_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>
</layout>